added book record

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+  <ul>
+  <li><%= link_to "Books", static_home_book_path %></li>
+  <li><%= link_to "Student" ,static_home_student_path %></li>
+  
+</ul>
+
     <%= yield %>
   </body>
 </html>
