--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h3>Book Name:</h3>
+<i><%=@book.book_name%></i>
+
+<h3>Author Name:</h3>
+<i><%=@book.author_name%></i>
+
+<h3>Description:</h3>
+<i><%=@book.description%></i>
