--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h3>Update Book Details</h3>
+<%= form_with model: @book do |form| %>
+  <%= form.text_field :book_name, placeholder: "book name" %>
+  <%= form.text_field :author_name, placeholder: "author name" %>
+  <%= form.text_field :description, placeholder: "description"%>
+  <%= form.submit %>
+<% end %>
