--- a/app/views/static_home/student.html.erb
+++ b/app/views/static_home/student.html.erb
@@ -1,2 +1,26 @@
-<h1>StaticHome#student</h1>
-<p>Find me in app/views/static_home/student.html.erb</p>
+<h1>Student Section</h1><%=link_to "Register new Student" ,new_student_path %><br><br>
+<table>
+<tr>
+    <th>Roll no</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Address</th>
+    <th>Book Details</th>
+    <th>View</td>
+    
+</tr>
+
+  <% @student.each do |s| %>
+    <tr>
+    <td><%=s.roll_no%></td>
+    <td><%=s.name%></td>
+    <td><%=s.last_name%></td>
+    <td><%=s.address%></td>
+    <td><%=s.book_id%></td>
+    
+    <td><%= link_to "view", student_path(s)%></td>
+    
+    </tr>
+  <% end %>
+
+</table>
