--- a/app/views/static_home/book.html.erb
+++ b/app/views/static_home/book.html.erb
@@ -1,5 +1,10 @@
+
+
+
+
 <h1>Book Section</h1><%=link_to "Add_new_book" , new_book_path%><br><br>
 <table>
+
 <tr>
     <th>Id</th>
     <th>Book Name</th>
@@ -17,7 +22,10 @@
     <td><%=book.book_name%></td>
     <td><%=book.author_name%></td>
     <td><%=book.description%></td>
-    <td></td>
+    <td>
+     <button id="myBtn">Assign Book</button>
+    
+    </td>
     <td><%= link_to "view", book_path(book)%></td>
     <td><%= link_to "edit", edit_book_path(book)%></td>
     <td><%= link_to "delete", book_path(book) ,method: :'delete' , data:{confirm:'Are you sure?'} %></td>
@@ -25,3 +33,4 @@
   <% end %>
 
 </table>
+
