--- a/app/views/static_home/home.html.erb
+++ b/app/views/static_home/home.html.erb
@@ -1,7 +1,6 @@
 <h1>Sample App</h1>
 <p>
-This is the home page for the
-<a href="https://www.railstutorial.org/">Ruby on Rails
-Tutorial</a>
+<h3>Welcome to Library Management<h3>
+
 sample application.
 </p>
