--- a/app/views/static_home/student.html.erb
+++ b/app/views/static_home/student.html.erb
@@ -5,7 +5,7 @@
     <th>First Name</th>
     <th>Last Name</th>
     <th>Address</th>
-    <th>Book Details</th>
+    <th>Book Borrow Details</th>
     <th>View</td>
     
 </tr>
