--- a/app/views/static_home/new_assign.html.erb
+++ b/app/views/static_home/new_assign.html.erb
@@ -1,4 +1,4 @@
-<h1>Assign <i><%=@book.book_name%></i> To Student</h1>
+<h1>Assign <font color="red"><%=@book.book_name%></font> To Student</h1>
 
 <table>
 <tr>
