--- a/app/views/static_home/book.html.erb
+++ b/app/views/static_home/book.html.erb
@@ -21,8 +21,7 @@
       <td>
         <%if book.student_id?%>
           <%s=@student.find(book.student_id)%>
-          <%=s.name%>
-          <font color="red"><%=book.due_date%></font>
+          <font color="red"><%=s.name%>  <%=book.due_date%></font>
         <%else%>
           <%=link_to "Assign Book" , static_home_assign_path(id: book.id ) %> 
         <%end%> 
